package effective_java.D_classes_and_interfaces.item20;

public interface Ivending {
    void start();
    void chooseProduct();
    void stop();
    void process();
}
